still the total isue

--- a/sales.html
+++ b/sales.html
@@ -18,6 +18,10 @@
 <div id="salesProfiles">
     <!-- you can see it in the app.js files -->
 </div>
+
+<div id="tablePlace">
+
+</div>
     </main>
     <footer>
     </footer>
