--- a/sales.html
+++ b/sales.html
@@ -15,6 +15,24 @@
     </header>
     <main>
 <h2>our salrs for today</h2>
+<form id="shopsForm">
+    <fieldset>
+        <legend>shops info</legend>
+        <label for="name">Shops Name</label>
+        <input type="text" id="name"/>
+        <br />
+        <label for="min">Min</label>
+        <input type="number" id="min" placeholder="add the minimum number of custmor" />
+        <br />
+        <label for="max">Max</label>
+        <input type="number" id="max" placeholder="add the maximum number of custmor" />
+        <br />
+        <label for="avgCookie">AvgCookie</label>
+        <input type="float" id="avgCookie" placeholder="add the avgCookie number of cookies"  />
+        <br />
+        <input type="submit"    />
+    </fieldset>
+</form>
 <div id="salesProfiles">
     <!-- you can see it in the app.js files -->
 </div>
