--- a/sales.html
+++ b/sales.html
@@ -19,16 +19,16 @@
     <fieldset>
         <legend>shops info</legend>
         <label for="name">Shops Name</label>
-        <input type="text" id="name"/>
+        <input type="text" id="name" required/>
         <br />
         <label for="min">Min</label>
-        <input type="number" id="min" placeholder="add the minimum number of custmor" />
+        <input type="number" id="min" placeholder="add the minimum number of custmor" required />
         <br />
         <label for="max">Max</label>
-        <input type="number" id="max" placeholder="add the maximum number of custmor" />
+        <input type="number" id="max" placeholder="add the maximum number of custmor" required/>
         <br />
         <label for="avgCookie">AvgCookie</label>
-        <input type="float" id="avgCookie" placeholder="add the avgCookie number of cookies"  />
+        <input type="float" id="avgCookie" placeholder="add the avgCookie number of cookies" required />
         <br />
         <input type="submit"    />
     </fieldset>
