make my style here

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
-    <title>Document</title>
+        <link href="css/reset.css" type="text/css" rel="stylesheet" /> 
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <title>Contact us</title>
 </head>
 <body>
-   <header><h1>Contact us</h1></header> 
+   <header><h1 id="title">Contact us</h1></header> 
    <main>
        <h2>you can call us by:</h2>
        <ul>
