--- a/sales.html
+++ b/sales.html
@@ -3,18 +3,16 @@
 <head>
     
     <title>sales</title>
-    <!-- <link href="css/reset.css" type="text/css" rel="stylesheet" /> -->
-    <!-- <link href="css/style.css" type="text/css" rel="stylesheet" /> -->
+    <!-- <link href="css/reset.css" type="text/css" rel="stylesheet" />  -->
+     <link href="css/style.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
     <header>
-        <h1>
-            sales
-        </h1>
+            <h1 id="title">our salrs for today</h1>
+
     </header>
     <main>
-<h2>our salrs for today</h2>
 <form id="shopsForm">
     <fieldset>
         <legend>shops info</legend>
@@ -30,7 +28,7 @@
         <label for="avgCookie">AvgCookie</label>
         <input type="float" id="avgCookie" placeholder="add the avgCookie number of cookies" required />
         <br />
-        <input type="submit"    />
+        <input type="submit" id="submit"    />
     </fieldset>
 </form>
 <div id="salesProfiles">
